# autonomous-equity-research-azimuthfm

./: .gitignore  README.md  pyproject.toml
config/: limits.yaml  models.yaml  sources.yaml
docs/: BUILD_PLAN.md  CUV Live Run Remediation Plan - 2026-04-20.md  CUV Runtime Hardening Plan - 2026-04-21.md  STATUS.md  citation-review-workflow-notes-2026-04-21.md
docs/specs/: Azimuth Analyst Agent — Complete Build Specification.md
prompts/: citation.md  lead_analyst.md  red_team.md  research_subagent.md  subagent_repair.md
prompts/dedicated_subagents/: INTEGRATION_GUIDE.md  _base.md  business_model_and_products.md  forecasts_guidance_and_news.md  historical_financials.md  open_questions_gap_fill.md  (+3 more)
schemas/: citation_output.schema.json  final_report.schema.json  red_team_verdict.schema.json  subagent_brief.schema.json  subagent_findings.schema.json  task_input.schema.json
src/: __init__.py  contracts_runtime.py  cuv_runtime_entrypoint.py  deterministic_lead_context.py  live_autonomous_runtime.py  orchestration_runtime.py  responses_agent_runtime.py  structured_secondary.py
tests/: test_dcf.py  test_deterministic_lead_context.py  test_live_autonomous_runtime.py  test_mvp_runtime.py  test_openai_web_search_adapter.py  test_parallel_tool_execution.py  test_payload_normalization.py  test_ratios.py  test_relative_valuation.py  test_responses_agent_runtime.py  test_restartable_failure_handling.py  test_reverse_dcf.py  test_runtime_documents.py  test_runtime_web.py  test_scenario_weighting.py  test_sensitivity.py  test_structured_secondary.py  test_tool_output_limits.py
(+18 files in other folders)
